initialize UserProfile model & complete LoggedOutView

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ python-dotenv = "*"
 gunicorn = "*"
 djangorestframework = "*"
 django-filter = "*"
+django-tinymce = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.7"
