--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.dev.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "watch": "node server.js",
+    "watch": "webpack --config webpack.dev.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -42,7 +42,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.21",
+    "prop-types": "^15.7.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
@@ -62,11 +62,13 @@
     "bootstrap-css-only": "^4.4.1",
     "cloudinary-react": "^1.5.0",
     "dateformat": "^3.0.3",
+    "js-cookie": "^2.2.1",
     "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.0.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0"
   }
 }
