--- a/package.json
+++ b/package.json
@@ -13,6 +13,20 @@
     "node": "12.16.1",
     "npm": "6.14.5"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-transform-runtime"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "author": "Kenneth V. Domingo <kvdomingo@up.edu.ph>",
   "license": "ISC",
   "devDependencies": {
@@ -70,5 +84,17 @@
     "react-helmet": "^6.0.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
