--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "axios": "^0.20.0",
     "bootstrap-css-only": "^4.4.1",
     "cloudinary-react": "^1.5.0",
     "dateformat": "^3.0.3",
@@ -83,7 +84,12 @@
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.0.0",
     "react-html-parser": "^2.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "browserslist": {
     "production": [
